# haskell-indexer

./: .gitignore  .gitmodules  .hlint.yaml  .travis.yml  Dockerfile  LICENSE  README.md  ROADMAP.md  build-cabal.sh  build-stack-docker.sh  build-stack.sh  cabal.project  cabal.project.freeze  run-ghc-tests.sh  serve.sh  stack-6.30.yaml  stack-8.17.yaml  stack-ghc-8.10.yaml  stack-ghc802.yaml  stack-ghc821.yaml  stack-ghc822.yaml  stack-ghc843.yaml  stack-ghc861.yaml  stack-ghc865.yaml  stack-lts-10.0.yaml  stack-lts-9.2.yaml  stack.yaml
.github/workflows/: analyze.yaml  build.yaml
haskell-indexer-backend-core/: haskell-indexer-backend-core.cabal
haskell-indexer-backend-core/src/Language/Haskell/Indexer/Backend/: AnalysisOptions.hs
haskell-indexer-backend-ghc/: haskell-indexer-backend-ghc.cabal
haskell-indexer-backend-ghc/src/Language/Haskell/Indexer/Backend/: Compat.hs  Ghc.hs  GhcApiSupport.hs  GhcArgs.hs  GhcEnv.hs  GhcLens.hs
haskell-indexer-backend-ghc/testdata/basic/: ArgRef.hs  CppInclude.hs  DataConWrap.hs  DataDecl.hs  DocUri.hs  DummyInclude.hs  ExecutableMain.hs  ForeignExport.hs  ForeignImport.hs  FunCall.hs  ImpExpDefs.hs  ImportDefs.hs  ImportRefs.hs  ImportRefsHiding.hs  Imports.hs  LocalRef.hs  PatSyn.hs  RecordRead.hs  RecordWrite.hs  RecursiveRef.hs  TemplateHaskellCodeExec.hs  TemplateHaskellCodeExecFFI.hs  TemplateHaskellQuotation.hs  TypeClass.hs  TypeClassRef.hs  TypeOperators.hs  TypeVsTerm.hs  UsedByTH.hs  UsesTH.hs  Utf8.hs  ffi.c
haskell-indexer-backend-ghc/testdata/typelink/: AliasVarBinds.hs  ClassVarBinds.hs  ContextBinds.hs  DataContext.hs  DataVarBinds.hs  ForallBinds.hs  InlineSig.hs  LetSig.hs  ScopedTypeVar.hs  SimpleSig.hs
haskell-indexer-backend-ghc/tests/: BasicTest.hs  TypeLinkTest.hs
haskell-indexer-backend-ghc/tests/Language/Haskell/Indexer/Backend/Ghc/Test/: BasicTestBase.hs  TestHelper.hs  TestShim.hs  TranslateAssert.hs  TypeLinkTestBase.hs
haskell-indexer-frontend-kythe/: haskell-indexer-frontend-kythe.cabal
haskell-indexer-frontend-kythe/src/Language/Haskell/Indexer/Frontend/: Kythe.hs
haskell-indexer-pathutil/: haskell-indexer-pathutil.cabal
haskell-indexer-pathutil/src/Language/Haskell/Indexer/Util/: Path.hs
haskell-indexer-pipeline-ghckythe/: haskell-indexer-pipeline-ghckythe.cabal
haskell-indexer-pipeline-ghckythe-wrapper/: haskell-indexer-pipeline-ghckythe-wrapper.cabal
haskell-indexer-pipeline-ghckythe-wrapper/main/: GhcKytheWrapper.hs
haskell-indexer-pipeline-ghckythe-wrapper/src/: GhcKytheWrapper.hs
haskell-indexer-pipeline-ghckythe-wrapper/src/Language/Haskell/Indexer/: Args.hs
haskell-indexer-pipeline-ghckythe/src/Language/Haskell/Indexer/Pipeline/: GhcKythe.hs
haskell-indexer-plugin/: CHANGELOG.md  LICENSE  haskell-indexer-plugin.cabal
haskell-indexer-plugin/src/Haskell/Indexer/: Plugin.hs
haskell-indexer-translate/: haskell-indexer-translate.cabal
haskell-indexer-translate/src/Language/Haskell/Indexer/: Translate.hs
haskell-indexer-translate/src/Language/Haskell/Indexer/Translate/: Render.hs  Utils.hs
kythe-proto/: Setup.hs  kythe-proto.cabal
kythe-schema/: kythe-schema.cabal
kythe-schema/src/Language/Kythe/Schema/: Raw.hs  Typed.hs
kythe-schema/src/Language/Kythe/Schema/Raw/: Proto.hs  VName.hs
kythe-verification/: README.md  test.sh
kythe-verification/testdata/basic/: Anchors.hs  AssocType.hs  ClosedFam.hs  CrossRef1.hs  CrossRef2.hs  DataFam.hs  DataRef.hs  DocUri.hs  FunctionArgRef.hs  ImpExpDefs.hs  ImportDefs.hs  ImportRefs.hs  ImportsRef.hs  LocalRef.hs  Module.hs  ModuleDocUri.hs  PatSyn.hs  RecordReadRef.hs  RecordWriteRef.hs  RecursiveRef.hs  TyFams.hs  TypeDef.hs  TypeFam.hs  TypeOperators.hs  TypeVarInSig.hs  TypeclassRef.hs
nix/: default.nix  haskell-indexer-backend-core.nix  haskell-indexer-backend-ghc.nix  haskell-indexer-frontend-kythe.nix  haskell-indexer-pathutil.nix  haskell-indexer-pipeline-ghckythe-wrapper.nix  haskell-indexer-pipeline-ghckythe.nix  haskell-indexer-translate.nix  kythe-proto.nix  kythe-schema.nix  text-offset.nix
scripts/: common.sh
stack-example/: README.md  gen-ghc-wrapper.sh  indexer-snapshot.yaml  stack.yaml
text-offset/: text-offset.cabal
text-offset/src/Data/Text/: Offset.hs
text-offset/tests/: OffsetTest.hs
wrappers/stack/: ghc
wrappers/stack-docker/: Dockerfile  stack-lts-6.30.yaml  stack-lts-9.2.yaml
wrappers/stack-docker/everything/: everything.cabal
wrappers/stack-docker/fake-docker/: ghc
wrappers/stack-docker/fake-stack/: ghc
wrappers/stack-docker/test-package/: test-package.cabal
wrappers/stack-docker/test-package/src/: Lib.hs
