name:                haskell-indexer-backend-core
version:             0.1.0.0
synopsis:            Code common to all indexer backends.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.Indexer.Backend.AnalysisOptions
  build-depends:       base >=4.8 && <4.10
                     , text
  default-language:    Haskell2010
