name:                haskell-indexer-backend-core
version:             0.1.0.0
synopsis:            Code common to all indexer backends.
description:         Part of haskell-indexer, see top-level README.md for more info.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.Indexer.Backend.AnalysisOptions
  build-depends:       base >=4.8 && <5
                     , text
  default-language:    Haskell2010
