name:                haskell-indexer-backend-ghc
version:             0.1.0.0
synopsis:            Indexing code using GHC API.
description:         Part of haskell-indexer, see top-level README.md for more info.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Simple
cabal-version:       2.0
extra-source-files:  testdata/basic/*.hs
                   , testdata/basic/*.c
                   , testdata/typelink/*.hs

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.Indexer.Backend.Ghc
                       Language.Haskell.Indexer.Backend.GhcLens
                       Language.Haskell.Indexer.Backend.GhcArgs
                       Language.Haskell.Indexer.Backend.GhcApiSupport
                       Language.Haskell.Indexer.Backend.GhcEnv
  build-depends:       Cabal >= 2.4 && < 3.3
                     , base >=4.8 && <5
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , ghc
                     , ghc-paths
                     , hashable
                     , haskell-indexer-backend-core >= 0.1
                     , haskell-indexer-translate >= 0.1
                     , mtl
                     , network-uri >= 2.6 && < 3
                     , reflection >= 1.2
                     , text
                     , transformers
                     , unix
                     , unordered-containers
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  default-language:    Haskell2010

Test-Suite basic_test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: BasicTest.hs
  hs-source-dirs: tests
  other-modules:       Language.Haskell.Indexer.Backend.Ghc.Test.TestShim
                       Language.Haskell.Indexer.Backend.Ghc.Test.BasicTestBase
                       Language.Haskell.Indexer.Backend.Ghc.Test.TranslateAssert
                       Language.Haskell.Indexer.Backend.Ghc.Test.TestHelper
  build-depends: base
               , bytestring
               , directory
               , filepath
               , ghc
               , haskell-indexer-backend-core >= 0.1
               , haskell-indexer-backend-ghc
               , haskell-indexer-translate >= 0.1
               , network-uri >= 2.6 && < 3
               , semigroups
               , temporary
               , test-framework
               , test-framework-hunit
               , text
               , text-offset
               , transformers
               , HUnit
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

Test-Suite typelink_test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: TypeLinkTest.hs
  hs-source-dirs: tests
  other-modules:       Language.Haskell.Indexer.Backend.Ghc.Test.TypeLinkTestBase
                       Language.Haskell.Indexer.Backend.Ghc.Test.TestShim
                       Language.Haskell.Indexer.Backend.Ghc.Test.TranslateAssert
                       Language.Haskell.Indexer.Backend.Ghc.Test.TestHelper
  build-depends: base
               , bytestring
               , directory
               , filepath
               , ghc
               , haskell-indexer-backend-core >= 0.1
               , haskell-indexer-backend-ghc
               , haskell-indexer-translate >= 0.1
               , network-uri >= 2.6 && < 3
               , semigroups
               , temporary
               , test-framework
               , test-framework-hunit
               , text
               , text-offset
               , transformers
               , HUnit
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
