name:                haskell-indexer-frontend-kythe
version:             0.1.0.0
synopsis:            Emits Kythe schema based on translation layer data.
description:         Part of haskell-indexer, see top-level README.md for more info.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Simple
cabal-version:       2.0

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.Indexer.Frontend.Kythe
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , conduit
                     , haskell-indexer-translate >= 0.1
                     , kythe-schema >= 0.1
                     , mmorph
                     , mtl
                     , text
                     , text-offset >= 0.1
                     , transformers
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  default-language:    Haskell2010
