name:                haskell-indexer-pathutil
version:             0.1.0.0
synopsis:            Utilities for dealing with filepaths.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.Indexer.Util.Path
  build-depends:       base >=4.8 && <4.10
                     , filepath
                     , text
  default-language:    Haskell2010
