name:                haskell-indexer-pathutil
version:             0.1.0.0
synopsis:            Utilities for dealing with filepaths.
description:         Part of haskell-indexer, see top-level README.md.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Simple
cabal-version:       2.0

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.Indexer.Util.Path
  build-depends:       base >=4.8 && <5
                     , filepath
                     , text
  default-language:    Haskell2010
