name:                haskell-indexer-pipeline-ghckythe-wrapper
version:             0.1.0.0
synopsis:            Executable able to take GHC arguments and emitting Kythe entries.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Simple
cabal-version:       >=1.22

executable "ghc_kythe_wrapper"
  hs-source-dirs:      src
  main-is:             GhcKytheWrapper.hs
  build-depends:       base >=4.8 && <4.10
                     , bytestring
                     , haskell-indexer-backend-core >= 0.1
                     , haskell-indexer-backend-ghc >= 0.1
                     , haskell-indexer-pathutil >= 0.1
                     , haskell-indexer-pipeline-ghckythe >= 0.1
                     , kythe-schema >= 0.1
                     , optparse-applicative
                     , proto-lens
                     , text
  default-language:    Haskell2010
