name:                haskell-indexer-pipeline-ghckythe-wrapper
version:             0.1.0.0
synopsis:            Executable able to take GHC arguments and emitting Kythe entries.
description:         Part of haskell-indexer, see top-level README.md for more info.
                     Should be merged into ghckythe eventually.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Simple
cabal-version:       2.0

library
  hs-source-dirs:    src
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , ghc
                     , haskell-indexer-backend-core >= 0.1
                     , haskell-indexer-backend-ghc >= 0.1
                     , haskell-indexer-pathutil >= 0.1
                     , haskell-indexer-pipeline-ghckythe >= 0.1
                     , haskell-indexer-translate >= 0.1
                     , kythe-schema >= 0.1
                     , optparse-applicative
                     , proto-lens >= 0.7 && < 0.8
                     , text
  exposed-modules:  Language.Haskell.Indexer.Args
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  default-language: Haskell2010


executable "ghc_kythe_wrapper"
  hs-source-dirs:      main
  main-is:             GhcKytheWrapper.hs
  build-depends:       base >= 4.8 && < 5, haskell-indexer-pipeline-ghckythe-wrapper
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  default-language:    Haskell2010
