name:                haskell-indexer-pipeline-ghckythe
version:             0.1.0.0
synopsis:            Gets GHC invocation arguments and streams Kythe entries.
description:         Part of haskell-indexer, see top-level README.md for more info.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.Indexer.Pipeline.GhcKythe
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , conduit >= 1.3
                     , filepath
                     , haskell-indexer-backend-core >= 0.1
                     , haskell-indexer-backend-ghc >= 0.1
                     , haskell-indexer-frontend-kythe >= 0.1
                     , haskell-indexer-translate >= 0.1
                     , kythe-schema >= 0.1
                     , mmorph
                     , mtl
                     , text
  default-language:    Haskell2010
