name:                haskell-indexer-translate
version:             0.1.0.0
synopsis:            Translation layer isolating compiler backends from frontends.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.Indexer.Translate
                       Language.Haskell.Indexer.Translate.Render
                       Language.Haskell.Indexer.Translate.Utils
  build-depends:       base >=4.8 && <4.10
                     , bytestring
                     , filepath
                     , text
  default-language:    Haskell2010
