name:                haskell-indexer-translate
version:             0.1.0.0
synopsis:            Translation layer isolating compiler backends from frontends.
description:         Part of haskell-indexer, see top-level README.md for more info.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Simple
cabal-version:       2.0

library
  hs-source-dirs:      src
  exposed-modules:     Language.Haskell.Indexer.Translate
                       Language.Haskell.Indexer.Translate.Render
                       Language.Haskell.Indexer.Translate.Utils
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , filepath
                     , text
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  default-language:    Haskell2010
