name:                kythe-proto
version:             0.1.0.0
synopsis:            Proto bindings for Kythe protobufs.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Custom
cabal-version:       >=1.22
extra-source-files:  ../third_party/kythe/kythe/proto/storage.proto

library
  exposed-modules:     Proto.Kythe.Proto.Storage
  build-depends:       base >=4.8 && <4.10
                     , proto-lens-protoc >= 0.1
  default-language:    Haskell2010
