name:                kythe-proto
version:             0.1.0.0
synopsis:            Proto bindings for Kythe protobufs.
description:         Part of haskell-indexer, see top-level README.md for more info.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Custom
cabal-version:       >=1.22
extra-source-files:  third_party/kythe/kythe/proto/storage.proto

library
  exposed-modules:     Proto.Kythe.Proto.Storage
                     , Proto.Kythe.Proto.Storage_Fields
  autogen-modules:     Proto.Kythe.Proto.Storage
                     , Proto.Kythe.Proto.Storage_Fields
  build-depends:       base >=4.8 && <5
                     , proto-lens-protoc >= 0.3.1.1
  default-language:    Haskell2010

custom-setup
  setup-depends:       base >=4.8 && <5
                     , Cabal
                     , proto-lens-protoc >= 0.3.1.1
