name:                kythe-schema
version:             0.1.0.0
synopsis:            Library for emitting Kythe schema entries.
description:         Part of haskell-indexer, see top-level README.md for more info.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Language
build-type:          Simple
cabal-version:       2.0

library
  hs-source-dirs:      src
  exposed-modules:     Language.Kythe.Schema.Raw.VName
                       Language.Kythe.Schema.Raw.Proto
                       Language.Kythe.Schema.Raw
                       Language.Kythe.Schema.Typed
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , data-default
                     , kythe-proto
                     , lens-family
                     , proto-lens >= 0.5 && < 0.6
                     , text
  default-language:    Haskell2010
