name:                text-offset
version:             0.1.0.0
synopsis:            Library for converting between line/column and byte offset.
description:         Useful for translating visual line/column info (from
                     editor or warning message) to byte offset. Assumes UTF-8.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Text
build-type:          Simple
cabal-version:       2.0

library
  hs-source-dirs:      src
  exposed-modules:     Data.Text.Offset
  build-depends:       base >=4.7 && <5
                     , text
                     , vector
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  default-language:    Haskell2010

Test-Suite offset_test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: OffsetTest.hs
  hs-source-dirs: tests
  build-depends: base
               , bytestring
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , text
               , text-offset
               , HUnit
               , QuickCheck
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
