name:                text-offset
version:             0.1.0.0
synopsis:            Library for converting between line/column and byte offset.
description:         Translates visual line/column info (as from editor or
                     warning message) to byte offset. Assumes UTF-8 encoding.
homepage:            https://github.com/google/haskell-indexer
license:             Apache-2.0
license-file:        LICENSE
author:              Robin Palotai
maintainer:          palotai.robin@gmail.com
copyright:           Google Inc.
category:            Text
build-type:          Simple
cabal-version:       2.0

library
  hs-source-dirs:      src
  exposed-modules:     Data.Text.Offset
  build-depends:       base >= 4.7 && < 4.13
                     , text >= 1.2.0.6 && < 1.3
                     , vector >= 0.10.2.3 && < 0.13
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  default-language:    Haskell2010

Test-Suite offset_test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: OffsetTest.hs
  hs-source-dirs: tests
  build-depends: base
               , bytestring >= 0.10.4 && < 0.11
               , test-framework >= 0.8.1.1 && < 0.9
               , test-framework-hunit >= 0.3.0.1 && < 0.4
               , test-framework-quickcheck2 >= 0.3.0.3 && < 0.4
               , text
               , text-offset
               , HUnit >= 1.2.5.2 && < 1.7
               , QuickCheck >= 2.7.6 && < 2.14
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
