name:                test-package
version:             0.1.0.0
license:             Apache-2.0
author:              Robin Palotai
maintainer:          robinpalotai@google.com
copyright:           Google Inc.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable test-package-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , test-package
  default-language:    Haskell2010
